--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
             class="navbar-brand-img h-100"
             alt="main_logo"
           />
-          <span class="ms-1 font-weight-bold text-white"
-            >Material Dashboard 2</span
-          >
+          <span class="ms-1 font-weight-bold text-white">Dashboard</span>
         </a>
       </div>
       <hr class="horizontal light mt-0 mb-2" />
@@ -89,7 +87,7 @@
           <li class="nav-item">
             <a
               class="nav-link text-white active bg-gradient-primary"
-              href="./pages/dashboard.html"
+              href="../index.html"
             >
               <div
                 class="text-white text-center me-2 d-flex align-items-center justify-content-center"
@@ -107,48 +105,6 @@
                 <i class="material-icons opacity-10">table_view</i>
               </div>
               <span class="nav-link-text ms-1">Tables</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="./pages/billing.html">
-              <div
-                class="text-white text-center me-2 d-flex align-items-center justify-content-center"
-              >
-                <i class="material-icons opacity-10">receipt_long</i>
-              </div>
-              <span class="nav-link-text ms-1">Billing</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="./pages/virtual-reality.html">
-              <div
-                class="text-white text-center me-2 d-flex align-items-center justify-content-center"
-              >
-                <i class="material-icons opacity-10">view_in_ar</i>
-              </div>
-              <span class="nav-link-text ms-1">Virtual Reality</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="./pages/rtl.html">
-              <div
-                class="text-white text-center me-2 d-flex align-items-center justify-content-center"
-              >
-                <i class="material-icons opacity-10"
-                  >format_textdirection_r_to_l</i
-                >
-              </div>
-              <span class="nav-link-text ms-1">RTL</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="./pages/notifications.html">
-              <div
-                class="text-white text-center me-2 d-flex align-items-center justify-content-center"
-              >
-                <i class="material-icons opacity-10">notifications</i>
-              </div>
-              <span class="nav-link-text ms-1">Notifications</span>
             </a>
           </li>
         </ul>
